# crunchyroll-manga-to-komga

./: README.md  pyproject.toml
crunchyroll_manga_to_komga/: __init__.py  __main__.py  api.py  comic_info.py  util.py
crunchyroll_manga_to_komga/tools/: show_image.py
