[tool.poetry]
name = "crunchyroll-manga-to-komga"
version = "1.0.0"
description = "Download manga from Crunchyroll"
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pathvalidate = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
mypy = "^0.961"
Pillow = "^9.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
